# backend-task-manager

./: .gitignore  CMakeLists.txt  README.md  cleanup.py  install.sh  log_updater.py  package.xml  pyproject.toml  setup.py  task_manager.py  uninstall.sh
backend_task_manager/: config.py  constants.py  database.py  docker.py  file_creator.py  s3.py  utils.py
docker/: Dockerfile
docker/evaluation/: entry.sh
docker/plotting/: entry.sh
docker/training/: entry.sh
launch/: start.launch  task_manager.launch  task_multiplexer.launch
msg/: StartEvaluation.msg  StartTraining.msg
scripts/: evaluation_manager.py  log_updater.py  task_manager.py  task_multiplexer.py  training_manager.py
services/: cleanup.service  cleanup.timer  log_updater.service  log_updater.timer  task_manager.service  task_manager.timer
task_manager/: config.py  constants.py  database.py  docker.py  file_creator.py  task_manager.py
