[tool.poetry]
name = "backend-task-manager"
version = "0.1.0"
description = ""
authors = ["ReykCS <reyk-carstens@web.de>"]

[tool.poetry.dependencies]
python = "^3.8"
catkin-pkg = "^0.5.2"
PyYAML = "^6.0"
rospkg = "^1.4.0"
pymongo = "^4.3.3"
python-dotenv = "^0.21.1"
netifaces = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
