[tool.poetry]
name = "backend-task-manager"
version = "0.1.0"
description = ""
authors = ["ReykCS <reyk-carstens@web.de>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
pymongo = "^4.3.3"
python-dotenv = "^0.21.1"
colorama = "^0.4.6"
boto3 = "^1.26.67"
PyDrive = "^1.3.1"
google-cloud-storage = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
